..F....... [ZBX-26665] fixed widget configuration form layout on narrow screens

--- a/sass/stylesheets/sass/components/dashboard/_widget-piechart.scss
+++ b/sass/stylesheets/sass/components/dashboard/_widget-piechart.scss
@@ -2,8 +2,8 @@
 
 form.dashboard-widget-piechart {
 	max-width: 1330px;
-	min-width: 1110px;
-	width: 100vw;
+	min-width: 1120px;
+	width: #{"min(100vw - 42px, 100vw - 22px)"};
 
 	.pie-chart-widget-config-tabs {
 		grid-column: 1 / -1;
